# rust-geo-booleanop

lib/: Cargo.toml
lib/src/: lib.rs
lib/src/boolean/: compare_segments.rs  compute_fields.rs  connect_edges.rs  divide_segment.rs  fill_queue.rs  mod.rs  possible_intersection.rs  subdivide_segments.rs  sweep_event.rs
lib/src/splay/: node.rs  tree.rs
tests/src/: edge_cases_test.rs  helper.rs
