[package]
name = "geo-booleanop"
version = "0.2.0"
authors = ["Bodo Junglas <junglas@objectcode.de>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/21re/rust-geo-booleanop"
description = "Rust implementation of the Martinez-Rueda Polygon Clipping Algorithm"
readme = "../README.md"
keywords = ["gis", "geo", "geography", "geospatial"]

[dependencies]
num-traits = { version = "0.2", default-features = false}
hashbrown = "0.8.2"

[dependencies.geo-types]
 git = "https://github.com/Simteract/geo"
 rev = "4e82dabb4221963c98f8fb181f28ce388fa86358"
 default-features = false

[dev-dependencies]
rand = "0.3"

[features]
default = ["std"]
std = [ "geo-types/std" ]
