[package]
name = "geo-booleanop"
version = "0.2.0"
authors = ["Bodo Junglas <junglas@objectcode.de>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/21re/rust-geo-booleanop"
description = "Rust implementation of the Martinez-Rueda Polygon Clipping Algorithm"
readme = "../README.md"
keywords = ["gis", "geo", "geography", "geospatial"]

[dependencies]
num-traits = { version = "0.2", default-features = false}
hashbrown = "0.8.2"

[dependencies.geo-types]
 git = "https://github.com/Simteract/geo"
 rev = "a713a98ae765b4be2a97058d70fa435eb76428b4"
 default-features = false

[dev-dependencies]
rand = "0.3"

[features]
default = ["std"]
std = [ "geo-types/std" ]
